Fixed horizontal scroll

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   font-size: 16px;
   /* for rem */
+  overflow-x: hidden;
 }
 
 #scroll-to-top-btn {
